# MatrixCpp

./: CMakeLists.txt  Main.cpp  PROJECT_MAP.txt  README.md
com/giappi/lang/: Matrix.cpp  Matrix.h  SquareMatrix.cpp  SquareMatrix.h
nbproject/: configurations.xml  project.properties  project.xml
vsproject/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters
